crates/crochet_parser/src/snapshots/crochet_parser__tests__destructuring-6.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let foo = ([a, b]) => a;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..24,
                pattern: Pattern {
                    span: 4..7,
                    kind: Ident(
                        BindingIdent {
                            name: "foo",
                            mutable: false,
                            span: 4..7,
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        span: 10..23,
                        kind: Lambda(
                            Lambda {
                                params: [
                                    EFnParam {
                                        pat: Pattern {
                                            span: 11..17,
                                            kind: Array(
                                                ArrayPat {
                                                    elems: [
                                                        Some(
                                                            Pattern {
                                                                span: 12..13,
                                                                kind: Ident(
                                                                    BindingIdent {
                                                                        name: "a",
                                                                        mutable: false,
                                                                        span: 12..13,
                                                                    },
                                                                ),
                                                                inferred_type: None,
                                                            },
                                                        ),
                                                        Some(
                                                            Pattern {
                                                                span: 15..16,
                                                                kind: Ident(
                                                                    BindingIdent {
                                                                        name: "b",
                                                                        mutable: false,
                                                                        span: 15..16,
                                                                    },
                                                                ),
                                                                inferred_type: None,
                                                            },
                                                        ),
                                                    ],
                                                    optional: false,
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        type_ann: None,
                                        optional: false,
                                        mutable: false,
                                    },
                                ],
                                body: Expr {
                                    span: 22..23,
                                    kind: Ident(
                                        Ident {
                                            span: 22..23,
                                            name: "a",
                                        },
                                    ),
                                    inferred_type: None,
                                },
                                is_async: false,
                                return_type: None,
                                type_params: None,
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
