crates/crochet_parser/src/snapshots/crochet_parser__tests__destructuring-7.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let foo = ([a, b]: [string, number]) => a\")"
---
Program {
    body: [
        VarDecl {
            span: 0..41,
            pattern: Ident(
                BindingIdent {
                    span: 4..7,
                    id: Ident {
                        span: 4..7,
                        name: "foo",
                    },
                    type_ann: None,
                },
            ),
            init: Some(
                Lambda(
                    Lambda {
                        span: 10..41,
                        params: [
                            Array(
                                ArrayPat {
                                    span: 11..35,
                                    elems: [
                                        Some(
                                            Ident(
                                                BindingIdent {
                                                    span: 12..13,
                                                    id: Ident {
                                                        span: 12..13,
                                                        name: "a",
                                                    },
                                                    type_ann: None,
                                                },
                                            ),
                                        ),
                                        Some(
                                            Ident(
                                                BindingIdent {
                                                    span: 15..16,
                                                    id: Ident {
                                                        span: 15..16,
                                                        name: "b",
                                                    },
                                                    type_ann: None,
                                                },
                                            ),
                                        ),
                                    ],
                                    optional: false,
                                    type_ann: Some(
                                        Tuple(
                                            TupleType {
                                                span: 19..35,
                                                types: [
                                                    Prim(
                                                        PrimType {
                                                            span: 20..26,
                                                            prim: Str,
                                                        },
                                                    ),
                                                    Prim(
                                                        PrimType {
                                                            span: 28..34,
                                                            prim: Num,
                                                        },
                                                    ),
                                                ],
                                            },
                                        ),
                                    ),
                                },
                            ),
                        ],
                        body: Ident(
                            Ident {
                                span: 40..41,
                                name: "a",
                            },
                        ),
                        is_async: false,
                        return_type: None,
                        type_params: None,
                    },
                ),
            ),
            declare: false,
        },
    ],
}
