crates/crochet_parser/src/snapshots/crochet_parser__tests__destructuring-8.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let foo = ({a, b}) => b;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..24,
                pattern: Pattern {
                    span: 4..7,
                    kind: Ident(
                        BindingIdent {
                            id: Ident {
                                span: 4..7,
                                name: "foo",
                            },
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        span: 10..23,
                        kind: Lambda(
                            Lambda {
                                params: [
                                    EFnParam {
                                        pat: Pattern {
                                            span: 11..17,
                                            kind: Object(
                                                ObjectPat {
                                                    props: [
                                                        Assign(
                                                            AssignPatProp {
                                                                span: 12..13,
                                                                key: Ident {
                                                                    span: 12..13,
                                                                    name: "a",
                                                                },
                                                                value: None,
                                                            },
                                                        ),
                                                        Assign(
                                                            AssignPatProp {
                                                                span: 15..16,
                                                                key: Ident {
                                                                    span: 15..16,
                                                                    name: "b",
                                                                },
                                                                value: None,
                                                            },
                                                        ),
                                                    ],
                                                    optional: false,
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        type_ann: None,
                                        optional: false,
                                        mutable: false,
                                    },
                                ],
                                body: Expr {
                                    span: 22..23,
                                    kind: Ident(
                                        Ident {
                                            span: 22..23,
                                            name: "b",
                                        },
                                    ),
                                    inferred_type: None,
                                },
                                is_async: false,
                                return_type: None,
                                type_params: None,
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
