crates/crochet_parser/src/snapshots/crochet_parser__tests__destructuring.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let {x, y} = point;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..19,
                pattern: Pattern {
                    span: 4..10,
                    kind: Object(
                        ObjectPat {
                            props: [
                                Assign(
                                    AssignPatProp {
                                        span: 5..6,
                                        key: Ident {
                                            span: 5..6,
                                            name: "x",
                                        },
                                        value: None,
                                    },
                                ),
                                Assign(
                                    AssignPatProp {
                                        span: 8..9,
                                        key: Ident {
                                            span: 8..9,
                                            name: "y",
                                        },
                                        value: None,
                                    },
                                ),
                            ],
                            optional: false,
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        span: 13..18,
                        kind: Ident(
                            Ident {
                                span: 13..18,
                                name: "point",
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
