crates/crochet_parser/src/snapshots/crochet_parser__tests__function_application-3.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"foo(10, \\\"hello\\\");\")"
---
Ok(
    Program {
        body: [
            Expr {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 17,
                    },
                },
                span: 0..17,
                expr: Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 16,
                        },
                    },
                    span: 0..16,
                    kind: App(
                        App {
                            lam: Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 3,
                                    },
                                },
                                span: 0..3,
                                kind: Ident(
                                    Ident {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 0,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 3,
                                            },
                                        },
                                        span: 0..3,
                                        name: "foo",
                                    },
                                ),
                                inferred_type: None,
                            },
                            args: [
                                ExprOrSpread {
                                    spread: None,
                                    expr: Expr {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 4,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 6,
                                            },
                                        },
                                        span: 4..6,
                                        kind: Lit(
                                            Num(
                                                Num {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 4,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 6,
                                                        },
                                                    },
                                                    span: 4..6,
                                                    value: "10",
                                                },
                                            ),
                                        ),
                                        inferred_type: None,
                                    },
                                },
                                ExprOrSpread {
                                    spread: None,
                                    expr: Expr {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 8,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 15,
                                            },
                                        },
                                        span: 8..15,
                                        kind: Lit(
                                            Str(
                                                Str {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 8,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 15,
                                                        },
                                                    },
                                                    span: 8..15,
                                                    value: "hello",
                                                },
                                            ),
                                        ),
                                        inferred_type: None,
                                    },
                                },
                            ],
                            type_args: None,
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
